2010-11-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/*:
   Update Scintilla to version 2.22.
   Keep Scintilla's directory structure mostly and only
   remove unused lexers.
 * wscript:
   Update Waf-based build system for Scintilla.
 * scintilla/Makefile.am, scintilla/include/Makefile.am:
   Update autotools-based build system for Scintilla.
 * scintilla/makefile.win32:
   Update Windows-Makefile-based build system for Scintilla.


2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Explain how to grep the source for Scintilla lexer properties.
 * src/sidebar.c, src/callbacks.c, src/main.c:
   Fix auto-displaying of sidebar tab bar when sidebar is reshown.
   Only auto-display symbols and documents tabs when showing the
   sidebar if there are no plugin tabs.
   Don't hide the sidebar on startup if only plugin tabs are visible
   (fixes #3101867).
 * src/plugindata.h:
   Make GEANY_API_VERSION, GEANY_ABI_VERSION macros instead of enums
   so you can protect code with '#if GEANY_API_VERSION >= 200'.
 * src/plugindata.h:
   Warn about preprocessor testing GEANY_API_VERSION below 200 because
   those tests will always fail.


2010-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.xml:
   Add 'instanceof' keyword for PHP (closes #3109330).


2010-11-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/dialogs.c, src/dialogs.h, src/callbacks.c:
   Re-focus Set Build Commands/Project dialogs after editing a build
   command label.
   Add 'parent' argument to some dialogs_show_input*() functions because
   the dialog parent may not always be the main window.
 * src/build.c, src/dialogs.c, src/callbacks.c:
   Don't change default build command entry color when cancelling
   label editing.
   Make dialogs_show_input() return NULL when cancelled.
 * tagmanager/php.c:
   Parse PHP final functions (fixes #3111171).