@@ -36,6 +36,7 @@ docComment=attention author brief bug class code date def enum example exception
 
 [lexer_properties]
 styling.within.preprocessor=1
+lexer.cpp.track.preprocessor=0
 preprocessor.symbol.$(file.patterns.cpp)=#
 preprocessor.start.$(file.patterns.cpp)=if ifdef ifndef
 preprocessor.middle.$(file.patterns.cpp)=else elif
